# automata

./: .gitignore  .pre-commit-config.yaml  Makefile  RECOVERY.md  WORKSPACE.bazel  docker-compose.yml  ros2.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci-containers.yml  ci-gate.yml  ci-go.yml  ci-iac.yml  ci-python.yml  ci-ros2.yml  ci-rust.yml  handle-infrastructure.yml  publish-images.yml  publish-sdk.yml
infra/: .ansible-lint  Makefile  RECOVERY.md
infra/ansible/: ansible.cfg
infra/ansible/inventory/: hosts.yml
infra/ansible/playbooks/: workstation.yml
infra/ansible/roles/docker/tasks/: main.yml
infra/ansible/roles/go/tasks/: main.yml
infra/ansible/roles/nvidia/tasks/: main.yml
infra/ansible/roles/rust/tasks/: main.yml
infra/ansible/roles/tailscale/tasks/: main.yml
infra/ansible/roles/tools/tasks/: main.yml
infra/ansible/vault/: secrets.yml
infra/terraform/: versions.tf
infra/terraform/environments/prod/: main.tf
infra/terraform/modules/github-repos/: main.tf
infra/terraform/modules/tailscale-acl/: main.tf
projects/demos/: mujoco_bridge.py
projects/demos/ros2_ws/src/learning_nodes/: CMakeLists.txt  package.xml
projects/foundations/: mujoco_bridge.py
projects/foundations/models/: arm_6dof.xml
ros2_ws/src/learning_nodes/src/: joint_publisher.cpp
scripts/: build_ros2.sh  upload_images.sh
shared/firmware/: Cargo.toml
shared/firmware/crates/encoder/: Cargo.toml
shared/firmware/crates/encoder/src/: lib.rs
shared/firmware/crates/encoder_sim/: Cargo.toml
shared/firmware/crates/encoder_sim/src/: main.rs
shared/images/automata-base/: Dockerfile
shared/images/automata-ml/: Dockerfile
shared/images/helix-base/: Dockerfile
shared/images/helix-ml/: Dockerfile
shared/images/helix-rust/: Dockerfile
shared/sdk/: pyproject.toml
shared/sdk/src/helix/: __init__.py  config.py  eval.py  telemetry.py
shared/sdk/tests/: test_imports.py
shared/telemetry_server/: Makefile  go.mod  go.sum  main.go  main_test.go  test_client.py
shared/telemetry_server/proto/: telemetry.proto
